# pysomr

./: .codespellignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  linter_requirements.txt  prebuild_requirements.txt  pyproject.toml  pysomr.pyx  pysomr.pyxbld  setup.py
.github/: dependabot.yml
.github/workflows/: build.yaml  build.yml  codespell.yaml  lint.yaml  test.yaml
examples/: example.py
src/pysomr/: __init__.pyi
