[project]
name = "pysomr"
version = "1.48.0a2"
requires-python = ">=3.10"
authors = [
  {name = "black-sliver"},
]
description = "Python Wrapper for SoMR API"
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Cython",
]

[project.urls]
Repository = "https://github.com/black-sliver/pysomr.git"

[build-system]
requires = ["setuptools == 80.10.2", "cython == 3.2.4"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
ext-modules = [
  {name = "pysomr", sources = ["pysomr.pyx"]},
]

[tool.cibuildwheel]
# skip some targets (for now):
# pypy we don't want to care about, but is not enabled by default anyway
# musllinux requires us to install dotnet10 inside a musl container
# win32 requires us to change how the symbols are exported from the native lib
skip = ["*-musllinux_*", "*-win32"]
# TODO: ship and run actual tests
test-command = [
  'python -c "import pysomr; assert any(item.id == 44 for item in pysomr.OW.get_all_items())"',
  'python -c "import pysomr; assert any(location.id == 6 for location in pysomr.OW.get_all_locations())"',
]

[tool.cibuildwheel.macos]
archs = ["universal2", "arm64"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "12.0"  # minimum for dotnet 10 AOT

[tool.black]
line-length = 120

[tool.cython-lint]
max-line-length = 120

[tool.flake8]
max-line-length = 120
ignore = [
  'S101',  # asserts are only used to get nicer errors
]

[tool.codespell]
skip = './.git,./build,./SecretOfManaRandomizer,./*.egg-info'
ignore-words = ".codespellignore"
